--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-!/sphinx/build/
-/sphinx/build/*
-/sphinx/commitall
-/sphinx/makemyhtml
-/sphinx/pushall
+!/sphinx*/build/
+/sphinx*/build/*
+/sphinx*/commitall
+/sphinx*/makemyhtml
+/sphinx*/pushall
 
